Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2260

Crash: timestamp-functions.cc:641 - Check failed: result_value > input_value

    XMLWordPrintableJSON

Details

    Description

      DB: functional

      Query:

      SELECT
      COALESCE(t1.tinyint_col, t1.year, t2.int_col) AS int_col,
      CAST('1997-11-16 00:00:00' AS TIMESTAMP) + INTERVAL COUNT(t1.year) MONTH AS timestamp_col,
      MAX(t2.timestamp_col) AS timestamp_col_1,
      (t2.int_col) * (t1.month) AS int_col_1,
      CAST((-870) + (FIRST_VALUE(-221) OVER (ORDER BY COALESCE(t1.tinyint_col, t1.year, t2.int_col), (t2.int_col) * (t1.month) DESC ROWS BETWEEN 82 FOLLOWING AND UNBOUNDED FOLLOWING)) AS STRING) AS char_col
      FROM alltypestiny t1
      LEFT JOIN (
      SELECT
      COALESCE(month, year, id) AS int_col,
      CAST(month AS STRING) AS char_col,
      CAST('2027-02-11 00:00:00' AS TIMESTAMP) + INTERVAL SUM(364) OVER () HOUR AS timestamp_col
      FROM alltypesagg
      ) t2 ON ((t2.timestamp_col) = (t1.timestamp_col)) AND ((t2.int_col) = (t1.month))
      GROUP BY
      COALESCE(t1.tinyint_col, t1.year, t2.int_col),
      (t2.int_col) * (t1.month)
      

      This query causes a crash every time it is executed, so it's easy to reproduce. I was unable to extract the stack trace.

      From impalad.Fatal:

      F0827 14:04:28.049944 22625 timestamp-functions.cc:641] Check failed: result_value > input_value (1899-05-02 08:25:26.290448384 vs. 2027-02-11 00:00:00)
      

      Attachments

        Activity

          People

            caseyc casey
            tarasbob Taras Bobrovytsky
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: