IMPALA-2260: Adding a large hour interval caused an interval overflow

Apparently there is a bug in boost when adding large hour intervals to
dates. To avoid the bug, the hour interval is split into weeks plus
remaining hours and added in two steps.

Change-Id: I1d0d4baf197a4a6875b2818e4ec174385292c04d
Reviewed-on: http://gerrit.cloudera.org:8080/1213
Reviewed-by: Casey Ching <casey@cloudera.com>
Tested-by: Internal Jenkins